# game-of-life

./: CMakeLists.txt  CMaketemp  generate.bat  readme.md
include/: array.h  framebuffer.h  grid.h  shader.h  texture.h  vertexarray.h
include/glad/: glad.h
res/: default.fs  default.vs
src/: array.c  framebuffer.c  glad.c  grid.c  main.c  shader.c  texture.c  vertexarray.c
